# ffb_replay

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
runs/: .gitkeep  comprehensive_test_simagic_alpha_v195.run  condition_test_simagic_alpha_v195.run  envelope_test_simagic_alpha_v195.run  racing_demo_simagic_alpha_v195.run  simple_test_simagic_alpha_v195.run  vibration_test_simagic_alpha_v195.run
scenarios/: comprehensive_test.yaml  condition_test.yaml  envelope_test.yaml  racing_demo.yaml  simple_test.yaml  vibration_test.yaml
src/: driver.rs  effects.rs  error.rs  main.rs  usb_monitor.rs
src/drivers/: mod.rs  sdl_driver.rs  simagic_driver.rs
