[package]
name = "ffb_replay"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
sdl3-sys = { version = "0.6", features = ["link-static", "build-from-source"] }

[target.'cfg(not(windows))'.dependencies]
sdl3-sys = { version = "0.6" }
